# mathdoku-ocr-ppt-generator

./: .gitignore  CLAUDE.md  MathdokuCandidatesMacro.bas  Mathdoku_08.yaml  Mathdoku_9x9_stresstest.yaml  README.md  create_vba_template.py  cspell.json  eslint.config.mts  make_mathdoku_pptx.py  ocr_mathdoku.py  package.json  pyproject.toml  tsconfig.json  vitest.config.ts
.claude/: settings.json  settings.local.json
__tests__/: Puzzle.test.ts  cageConstraints.test.ts  combinatorics.test.ts  parsers.test.ts  puzzleTestHelper.ts  tsconfig.json  typeGuards.test.ts
__tests__/strategies/: DeterminedByCageStrategy.test.ts  EliminateByOperationStrategy.test.ts  HiddenSingleStrategy.test.ts  NakedSetStrategy.test.ts  SingleCandidateStrategy.test.ts
apps-script/: Code.ts  Enter.ts  EnterDialog.html  HiddenSingleStrategy.ts  MakeNextSlide.ts  NakedSetStrategy.ts  Puzzle.ts  SingleCandidateStrategy.ts  Utils.ts  View.ts  tsconfig.json
assets/: template-960x540.pptx
ocr/: ocr_mathdoku.py
ocr-python/ocr/: ocr_mathdoku.py
ocr-python/tests/: test_ocr.py
samples/: 5.yaml  6.yaml  7.yaml  8.yaml  9.yaml
scripts/: assert.ts  build.ts  makeMathdokuSlides.ts
src/: Puzzle.ts  View.ts  cageConstraints.ts  combinatorics.ts  main.ts  parsers.ts  typeGuards.ts
src/@types/: eslint-community-eslint-plugin-eslint-comments-configs.d.ts  rollup-plugin-gas.d.ts
src/cellChanges/: CandidatesChange.ts  CandidatesStrikethrough.ts  CellChange.ts  CellClearance.ts  ValueChange.ts
src/strategies/: DeterminedByCageStrategy.ts  EliminateByOperationStrategy.ts  (+9 more)
tests/: test_ocr.py
(+67 files in other folders)
